# remote_fmt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fmt.patch
examples/: CMakeLists.txt  basic_usage.cpp  catalog.cpp  catalog_generator.cpp
src/remote_fmt/: catalog.hpp  catalog_helpers.hpp  fmt_wrapper.hpp  parser.hpp  remote_fmt.hpp  type_identifier.hpp
tools/: generate_string_constants.py
